<resources>
    <string name="app_name">Find Friends</string>
    <string name="action_settings">Settings</string>
    <string name="content_desc_icon">Application icon</string>
    <string name="sign_in_with_phone">Sign in with Phone</string>
    <string name="toast_twitter_signin_fail">It was not possible to Sign in with Twitter, try again later</string>
    <string name="toast_twitter_digits_fail">It was not possible to Sign up with your Phone, try again later</string>
    <string name="toast_twitter_signin_success">Login success: twitter account active</string>
    <string name="toast_twitter_digits_success">Login success: digits account active</string>
    <string name="skip_login">Skip</string>
    <string name="search_tweets">Search Tweets</string>
    <string name="search_profile">Search Profile</string>
    <string name="search_timeline">Search Timeline</string>
    <string name="sign_out">Sign Me Out</string>
    <string name="prompt_user_interest">Interest</string>
    <string name="prompt_user_location">Location</string>
    <string name="prompt_search_radius">Search Radius(miles)</string>
    <string name="prompt_result_number">Results Listed</string>
    <string name="prompt_username">Twitter Username</string>
    <string name="heat_map_option">Heat Map</string>
    <string name="google_map_option">Google Map</string>
    <string name="goback_option">Go Back</string>
    <string name="profile_list_option">Profile List</string>
    <string name="tag_cloud_option">Tag Cloud</string>
    <string name="tweets_list_option">Tweets List</string>
    <string name="created_at">Creation Time</string>
    <string name="tweet_text">Tweet Text</string>
    <string name="user_screen_name_holder">\Screen Name</string>
    <string name="user_profile_holder">Profile Description</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="default_result_number">Default: 20</string>
    <string name="default_radius_in_miles">Default: 10</string>


</resources>
