<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/custom_button"
    tools:context=".SearchProfileActivity">

    <item android:id="@+id/heat_map"
        android:title="@string/heat_map_option"
        android:icon="@drawable/heatmap_icon"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/google_map"
        android:title="@string/google_map_option"
        android:icon="@drawable/googlemap_icon"
        android:orderInCategory="101"
        app:showAsAction="always"/>

    <item android:id="@+id/tag_cloud"
        android:title="@string/tag_cloud_option"
        android:icon="@drawable/tagcloud_icon"
        android:orderInCategory="102"
        app:showAsAction="always"/>

    <item android:id="@+id/exit"
        android:title="@string/google_map_option"
        android:icon="@drawable/exit_icon"
        android:orderInCategory="103"
        app:showAsAction="always" />



</menu>
