<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/LogoView"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_desc_icon"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logo2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LogoView"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:id="@+id/app_name"/>

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"/>

    <com.digits.sdk.android.DigitsAuthButton
        android:id="@+id/digit_auth_button"
        android:layout_below="@id/twitter_login_button"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/digit_auth_button"
        android:layout_marginTop="45dp"
        android:text="@string/skip_login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/twitter_dark_blue"
        android:gravity="center_horizontal"
       android:id="@+id/skip"/>


</RelativeLayout>
